--- a/experiments/csv/parser.ipynb
+++ b/experiments/csv/parser.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,10 +23,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# extract information\n",
     "L = []\n",
     "confidences = []\n",
     "layers = []\n",
@@ -49,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,12 +79,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# COMPUTE MEAN\n",
     "N_SAMPLES = 10\n",
-    "N_DROPOUTS = 21\n",
     "confidences_avg = []\n",
     "dropouts_avg = []\n",
     "layers_avg = []\n",
@@ -97,559 +98,26 @@
     "    confidences_avg.append(confidence_avg)\n",
     "    dropouts_avg.append(dropouts[i])\n",
     "    layers_avg.append(layers[i])\n",
-    "    output_avg.append(\"bee\")\n",
-    "    "
+    "    output_avg.append(\"bee\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>confidence</th>\n",
-       "      <th>layer</th>\n",
-       "      <th>dropout</th>\n",
-       "      <th>output</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>160</th>\n",
-       "      <td>0.146654</td>\n",
-       "      <td>8</td>\n",
-       "      <td>65</td>\n",
-       "      <td>bee</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>161</th>\n",
-       "      <td>0.371318</td>\n",
-       "      <td>8</td>\n",
-       "      <td>70</td>\n",
-       "      <td>bee</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>162</th>\n",
-       "      <td>0.272115</td>\n",
-       "      <td>8</td>\n",
-       "      <td>75</td>\n",
-       "      <td>bee</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>163</th>\n",
-       "      <td>0.064248</td>\n",
-       "      <td>8</td>\n",
-       "      <td>80</td>\n",
-       "      <td>bee</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>164</th>\n",
-       "      <td>0.024683</td>\n",
-       "      <td>8</td>\n",
-       "      <td>85</td>\n",
-       "      <td>bee</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>165</th>\n",
-       "      <td>0.011868</td>\n",
-       "      <td>8</td>\n",
-       "      <td>90</td>\n",
-       "      <td>bee</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>166</th>\n",
-       "      <td>0.003987</td>\n",
-       "      <td>8</td>\n",
-       "      <td>95</td>\n",
-       "      <td>bee</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>167</th>\n",
-       "      <td>0.001000</td>\n",
-       "      <td>8</td>\n",
-       "      <td>100</td>\n",
-       "      <td>bee</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>168</th>\n",
-       "      <td>0.984750</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>bee</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>169</th>\n",
-       "      <td>0.965874</td>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>bee</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>170</th>\n",
-       "      <td>0.425728</td>\n",
-       "      <td>1</td>\n",
-       "      <td>10</td>\n",
-       "      <td>bee</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>171</th>\n",
-       "      <td>0.371192</td>\n",
-       "      <td>1</td>\n",
-       "      <td>15</td>\n",
-       "      <td>bee</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>172</th>\n",
-       "      <td>0.012753</td>\n",
-       "      <td>1</td>\n",
-       "      <td>20</td>\n",
-       "      <td>bee</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>173</th>\n",
-       "      <td>0.003134</td>\n",
-       "      <td>1</td>\n",
-       "      <td>25</td>\n",
-       "      <td>bee</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>174</th>\n",
-       "      <td>0.059686</td>\n",
-       "      <td>1</td>\n",
-       "      <td>30</td>\n",
-       "      <td>bee</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>175</th>\n",
-       "      <td>0.000013</td>\n",
-       "      <td>1</td>\n",
-       "      <td>35</td>\n",
-       "      <td>bee</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>176</th>\n",
-       "      <td>0.000480</td>\n",
-       "      <td>1</td>\n",
-       "      <td>40</td>\n",
-       "      <td>bee</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>177</th>\n",
-       "      <td>0.001831</td>\n",
-       "      <td>1</td>\n",
-       "      <td>45</td>\n",
-       "      <td>bee</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>178</th>\n",
-       "      <td>0.000039</td>\n",
-       "      <td>1</td>\n",
-       "      <td>50</td>\n",
-       "      <td>bee</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>179</th>\n",
-       "      <td>0.000175</td>\n",
-       "      <td>1</td>\n",
-       "      <td>55</td>\n",
-       "      <td>bee</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>180</th>\n",
-       "      <td>0.000366</td>\n",
-       "      <td>1</td>\n",
-       "      <td>60</td>\n",
-       "      <td>bee</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>181</th>\n",
-       "      <td>0.000224</td>\n",
-       "      <td>1</td>\n",
-       "      <td>65</td>\n",
-       "      <td>bee</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>182</th>\n",
-       "      <td>0.000108</td>\n",
-       "      <td>1</td>\n",
-       "      <td>70</td>\n",
-       "      <td>bee</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>183</th>\n",
-       "      <td>0.000054</td>\n",
-       "      <td>1</td>\n",
-       "      <td>75</td>\n",
-       "      <td>bee</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>184</th>\n",
-       "      <td>0.000519</td>\n",
-       "      <td>1</td>\n",
-       "      <td>80</td>\n",
-       "      <td>bee</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>185</th>\n",
-       "      <td>0.000130</td>\n",
-       "      <td>1</td>\n",
-       "      <td>85</td>\n",
-       "      <td>bee</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>186</th>\n",
-       "      <td>0.000080</td>\n",
-       "      <td>1</td>\n",
-       "      <td>90</td>\n",
-       "      <td>bee</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>187</th>\n",
-       "      <td>0.000437</td>\n",
-       "      <td>1</td>\n",
-       "      <td>95</td>\n",
-       "      <td>bee</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>188</th>\n",
-       "      <td>0.000001</td>\n",
-       "      <td>1</td>\n",
-       "      <td>100</td>\n",
-       "      <td>bee</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>189</th>\n",
-       "      <td>0.984750</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>bee</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>210</th>\n",
-       "      <td>0.984750</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>bee</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>211</th>\n",
-       "      <td>0.976087</td>\n",
-       "      <td>3</td>\n",
-       "      <td>5</td>\n",
-       "      <td>bee</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>212</th>\n",
-       "      <td>0.985733</td>\n",
-       "      <td>3</td>\n",
-       "      <td>10</td>\n",
-       "      <td>bee</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>213</th>\n",
-       "      <td>0.984978</td>\n",
-       "      <td>3</td>\n",
-       "      <td>15</td>\n",
-       "      <td>bee</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>214</th>\n",
-       "      <td>0.956358</td>\n",
-       "      <td>3</td>\n",
-       "      <td>20</td>\n",
-       "      <td>bee</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>215</th>\n",
-       "      <td>0.955925</td>\n",
-       "      <td>3</td>\n",
-       "      <td>25</td>\n",
-       "      <td>bee</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>216</th>\n",
-       "      <td>0.873144</td>\n",
-       "      <td>3</td>\n",
-       "      <td>30</td>\n",
-       "      <td>bee</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>217</th>\n",
-       "      <td>0.834683</td>\n",
-       "      <td>3</td>\n",
-       "      <td>35</td>\n",
-       "      <td>bee</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>218</th>\n",
-       "      <td>0.624051</td>\n",
-       "      <td>3</td>\n",
-       "      <td>40</td>\n",
-       "      <td>bee</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>219</th>\n",
-       "      <td>0.906731</td>\n",
-       "      <td>3</td>\n",
-       "      <td>45</td>\n",
-       "      <td>bee</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>220</th>\n",
-       "      <td>0.386815</td>\n",
-       "      <td>3</td>\n",
-       "      <td>50</td>\n",
-       "      <td>bee</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>221</th>\n",
-       "      <td>0.109552</td>\n",
-       "      <td>3</td>\n",
-       "      <td>55</td>\n",
-       "      <td>bee</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>222</th>\n",
-       "      <td>0.218245</td>\n",
-       "      <td>3</td>\n",
-       "      <td>60</td>\n",
-       "      <td>bee</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>223</th>\n",
-       "      <td>0.084527</td>\n",
-       "      <td>3</td>\n",
-       "      <td>65</td>\n",
-       "      <td>bee</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>224</th>\n",
-       "      <td>0.149372</td>\n",
-       "      <td>3</td>\n",
-       "      <td>70</td>\n",
-       "      <td>bee</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>225</th>\n",
-       "      <td>0.001902</td>\n",
-       "      <td>3</td>\n",
-       "      <td>75</td>\n",
-       "      <td>bee</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>226</th>\n",
-       "      <td>0.000956</td>\n",
-       "      <td>3</td>\n",
-       "      <td>80</td>\n",
-       "      <td>bee</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>227</th>\n",
-       "      <td>0.000939</td>\n",
-       "      <td>3</td>\n",
-       "      <td>85</td>\n",
-       "      <td>bee</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>228</th>\n",
-       "      <td>0.000939</td>\n",
-       "      <td>3</td>\n",
-       "      <td>90</td>\n",
-       "      <td>bee</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>229</th>\n",
-       "      <td>0.000939</td>\n",
-       "      <td>3</td>\n",
-       "      <td>95</td>\n",
-       "      <td>bee</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>230</th>\n",
-       "      <td>0.000001</td>\n",
-       "      <td>3</td>\n",
-       "      <td>100</td>\n",
-       "      <td>bee</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>231</th>\n",
-       "      <td>0.984750</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>bee</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>232</th>\n",
-       "      <td>0.984583</td>\n",
-       "      <td>4</td>\n",
-       "      <td>5</td>\n",
-       "      <td>bee</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>233</th>\n",
-       "      <td>0.977285</td>\n",
-       "      <td>4</td>\n",
-       "      <td>10</td>\n",
-       "      <td>bee</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>234</th>\n",
-       "      <td>0.990689</td>\n",
-       "      <td>4</td>\n",
-       "      <td>15</td>\n",
-       "      <td>bee</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>235</th>\n",
-       "      <td>0.971494</td>\n",
-       "      <td>4</td>\n",
-       "      <td>20</td>\n",
-       "      <td>bee</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>236</th>\n",
-       "      <td>0.979028</td>\n",
-       "      <td>4</td>\n",
-       "      <td>25</td>\n",
-       "      <td>bee</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>237</th>\n",
-       "      <td>0.984116</td>\n",
-       "      <td>4</td>\n",
-       "      <td>30</td>\n",
-       "      <td>bee</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>238</th>\n",
-       "      <td>0.971037</td>\n",
-       "      <td>4</td>\n",
-       "      <td>35</td>\n",
-       "      <td>bee</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>239</th>\n",
-       "      <td>0.983444</td>\n",
-       "      <td>4</td>\n",
-       "      <td>40</td>\n",
-       "      <td>bee</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>80 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     confidence layer dropout output\n",
-       "160    0.146654     8      65    bee\n",
-       "161    0.371318     8      70    bee\n",
-       "162    0.272115     8      75    bee\n",
-       "163    0.064248     8      80    bee\n",
-       "164    0.024683     8      85    bee\n",
-       "165    0.011868     8      90    bee\n",
-       "166    0.003987     8      95    bee\n",
-       "167    0.001000     8     100    bee\n",
-       "168    0.984750     1       0    bee\n",
-       "169    0.965874     1       5    bee\n",
-       "170    0.425728     1      10    bee\n",
-       "171    0.371192     1      15    bee\n",
-       "172    0.012753     1      20    bee\n",
-       "173    0.003134     1      25    bee\n",
-       "174    0.059686     1      30    bee\n",
-       "175    0.000013     1      35    bee\n",
-       "176    0.000480     1      40    bee\n",
-       "177    0.001831     1      45    bee\n",
-       "178    0.000039     1      50    bee\n",
-       "179    0.000175     1      55    bee\n",
-       "180    0.000366     1      60    bee\n",
-       "181    0.000224     1      65    bee\n",
-       "182    0.000108     1      70    bee\n",
-       "183    0.000054     1      75    bee\n",
-       "184    0.000519     1      80    bee\n",
-       "185    0.000130     1      85    bee\n",
-       "186    0.000080     1      90    bee\n",
-       "187    0.000437     1      95    bee\n",
-       "188    0.000001     1     100    bee\n",
-       "189    0.984750     2       0    bee\n",
-       "..          ...   ...     ...    ...\n",
-       "210    0.984750     3       0    bee\n",
-       "211    0.976087     3       5    bee\n",
-       "212    0.985733     3      10    bee\n",
-       "213    0.984978     3      15    bee\n",
-       "214    0.956358     3      20    bee\n",
-       "215    0.955925     3      25    bee\n",
-       "216    0.873144     3      30    bee\n",
-       "217    0.834683     3      35    bee\n",
-       "218    0.624051     3      40    bee\n",
-       "219    0.906731     3      45    bee\n",
-       "220    0.386815     3      50    bee\n",
-       "221    0.109552     3      55    bee\n",
-       "222    0.218245     3      60    bee\n",
-       "223    0.084527     3      65    bee\n",
-       "224    0.149372     3      70    bee\n",
-       "225    0.001902     3      75    bee\n",
-       "226    0.000956     3      80    bee\n",
-       "227    0.000939     3      85    bee\n",
-       "228    0.000939     3      90    bee\n",
-       "229    0.000939     3      95    bee\n",
-       "230    0.000001     3     100    bee\n",
-       "231    0.984750     4       0    bee\n",
-       "232    0.984583     4       5    bee\n",
-       "233    0.977285     4      10    bee\n",
-       "234    0.990689     4      15    bee\n",
-       "235    0.971494     4      20    bee\n",
-       "236    0.979028     4      25    bee\n",
-       "237    0.984116     4      30    bee\n",
-       "238    0.971037     4      35    bee\n",
-       "239    0.983444     4      40    bee\n",
-       "\n",
-       "[80 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# STORE TO DATAFRAME\n",
     "output_avg = pd.DataFrame(output_avg, columns=[\"output\"])\n",
     "dropouts_avg = pd.DataFrame(dropouts_avg, columns=[\"dropout\"])\n",
     "confidences_avg = pd.DataFrame(confidences_avg, columns=[\"confidence\"])\n",
     "layers_avg = pd.DataFrame(layers_avg, columns=[\"layer\"])\n",
-    "df = pd.concat([confidences_avg, layers_avg, dropouts_avg, output_avg], axis=1)\n",
-    "df.iloc[160:240, :]\n"
+    "df = pd.concat([confidences_avg, layers_avg, dropouts_avg, output_avg], axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -659,20 +127,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "fast_model.to_csv('fast_model_weight_performance.csv', sep=',', index=None)\n",
     "accurate_model.to_csv('accurate_model_weight_performance.csv', sep=',', index=None)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
